--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,3 @@
-section ul {
-  width: 100%;
-  display: flex;
-  list-style: none;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  padding: 15px 15px;
-  flex: 0 0 0;
-  margin: 0 auto;
-}
-
 #progress .indicator {
   stroke: #fafafa;
   margin-top: 100px;
@@ -19,25 +8,18 @@ section ul {
   width: 5px;
   background: #cbd5e0;
   -webkit-border-radius: 1ex;
+  -webkit-overflow-scrolling: auto;
   border-radius: 1ex;
-}
-
-section li {
-  height: 100%;
-  flex: 0 0 300px;
-  margin: 0 20px 0 0;
-}
-
-section li:last-of-type {
-  margin: 0;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #2c3d55;
   -webkit-border-radius: 1ex;
+  -webkit-overflow-scrolling: auto;
   border-radius: 1ex;
 }
 
 ::-webkit-scrollbar-corner {
   background: #fff3;
+  -webkit-overflow-scrolling: auto;
 }
